--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: black;
 }
 
 header {
@@ -144,3 +145,49 @@ header nav ul li a {
     font-size: 18px;
     color: #666;
 }
+.table  {
+    background-color: #f8f9fa;
+  }
+  
+  .custom-table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    margin-top: 50px;
+  }
+  
+  .custom-table td, .custom-table th {
+    padding: 20px;
+  }
+  
+  .role-column {
+    background-color: #007bff; /* Bootstrap primary color */
+    color: white;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    text-align: center;
+    font-weight: bold;
+    width: 150px; /* Set a fixed width for the role column */
+  }
+  
+  .responsibility-column {
+    background-color: #e9ecef; /* Light grey background color */
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    padding-left: 20px; /* Adjust padding as needed */
+  }
+  
+  .table-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .table-headline {
+    text-align: center;
+    color: black; /* Black color for the headline */
+    margin-bottom: 30px;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+
+ 
