--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@
     bottom: 0;
     height: 48px;
     width: 100%;
-    background-color: #008cba;
-    color:white;
+    background-color:black;
+    color:black;
     text-align: center;
 }
