--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,12 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: black;
+    
 }
+body {
+    background-color:black;
+}
+
 
 header {
     background-color: #333;
@@ -110,7 +114,7 @@ header nav ul li a {
     bottom: 0;
     height: 48px;
     width: 100%;
-    background-color: #008cba;
+    background-color:black;
     color:white;
     text-align: center;
 }
